--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
